--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,14 @@
 {
-  "presets": [["@babel/preset-env"]],
+  "presets": [
+    [
+      "@babel/preset-env"
+    ]
+  ],
   "env": {
     "test": {
-      "plugins": ["@babel/plugin-transform-modules-commonjs"]
+      "plugins": [
+        "@babel/plugin-transform-modules-commonjs"
+      ]
     }
   }
 }
