--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon ./bin/www",
     "build": "babel bin -d dist"
   },
+  "type": "module",
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,7 +16,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
