--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
     "express": "~4.16.1",
+    "express-session": "^1.18.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^8.16.3",
     "pug": "2.0.0-beta11",
+    "sequelize": "^6.37.7",
     "url": "^0.11.4"
   },
   "devDependencies": {
