--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "type": "module",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "argon2": "^0.44.0",
     "connect-session-sequelize": "^7.1.7",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
     "express": "~4.16.1",
     "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^8.16.3",
