add package and more depdentciy

--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   "type": "module",
   "dependencies": {
     "argon2": "^0.44.0",
+    "base64-vlq": "^0.0.5",
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "pg": "^8.16.3",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.4",
     "sequelize": "^6.37.7",
     "url": "^0.11.4"
   },
