--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.16.3",
     "pug": "^2.0.4",
     "sequelize": "^6.37.7",
-    "url": "^0.11.4"
+    "url": "^0.11.4",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
