--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "passport": "^0.7.0",
+    "passport-oauth2": "^1.8.0",
     "pg": "^8.16.3",
     "pug": "^2.0.4",
     "sequelize": "^6.37.7",
-    "url": "^0.11.4",
-    "jsonwebtoken": "^9.0.2"
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
