login with oauth2 success

--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-oauth": "^1.0.0",
     "passport-oauth2": "^1.8.0",
     "pg": "^8.16.3",
     "pug": "^2.0.4",
