--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
+    "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
