--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "csv-parser": "^3.2.0",
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
