--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "www.js",
   "scripts": {
     "start": "nodemon ./bin/www",
-    "build": "babel bin -d dist"
+    "build": "babel bin -d dist",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "type": "module",
   "dependencies": {
@@ -43,6 +46,7 @@
     "@babel/core": "^7.28.3",
     "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.3",
+    "jest": "^30.1.3",
     "nodemon": "^3.1.10"
   }
 }
