--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "@babel/core": "^7.28.3",
     "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.3",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.1.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
