--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "argon2": "^0.44.0",
     "base64-vlq": "^0.0.5",
+    "bull": "^4.16.5",
+    "bullmq": "^5.58.5",
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -28,6 +30,7 @@
     "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
     "http-errors": "~1.6.3",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
@@ -38,6 +41,7 @@
     "passport-oauth2": "^1.8.0",
     "pg": "^8.16.3",
     "pug": "^2.0.4",
+    "redis": "^5.8.2",
     "sequelize": "^6.37.7",
     "url": "^0.11.4"
   },
